# sqlite-web

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  IMPLEMENTATION.md  README.md  bundle.sh  flake.nix  server.js  test-embedded.html  test.html  test.sh
.github/workflows/: npm-release.yaml  test-ui.yaml  test-wasm.yaml
crates/sqlite-web/: Cargo.toml
crates/sqlite-web-core/: Cargo.toml
crates/sqlite-web-core/src/: messages.rs  util.rs
crates/sqlite-web-core/src/database_functions/: bigint_sum.rs  float_is_zero.rs  float_negate.rs
crates/sqlite-web/src/: errors.rs  lib.rs  params.rs  ready.rs  tests.rs  utils.rs  worker_template.rs
github/workflows/: test-ui.yaml  test-wasm.yaml
pkg/: package.json
scripts/: local-bundle.sh
src/: database.rs  database_functions.rs  lib.rs  messages.rs  worker.rs  worker_template.rs
svelte-test/: .gitignore  README.md  package-lock.json  package.json  vite.config.ts  vitest.config.js
svelte-test/src/routes/: +page.svelte
svelte-test/src/routes/sql/: +page.svelte
svelte-test/static/: sqlite_worker.js  sqlite_worker_bg.wasm
svelte-test/static/snippets/wasm-array-cp-201e2a98f0e691f7/: copy.min.js
svelte-test/tests/: test-setup.js
svelte-test/tests/database-functions/: bigint-sum.test.ts  float-is-zero.test.ts  float-negate.test.ts  float-sum.test.ts  float-zero-hex.test.ts
svelte-test/tests/fixtures/: test-helpers.ts
svelte-test/tests/integration/: database-basic.test.ts  error-handling.test.ts  multi-sql-commands.test.ts  opfs-persistence.test.ts  parameter-binding.test.ts  wipe-and-recreate.test.ts  worker-communication.test.ts
