[package]
name = "sqlite-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Blob",
    "BlobPropertyBag", 
    "Url",
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "BroadcastChannel",
    "MessageEvent", 
    "DedicatedWorkerGlobalScope",
    "Navigator",
    "Window",
    "Location",
    "console"
]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
uuid = { version = "1.0", features = ["v4", "js"] }
console_error_panic_hook = "0.1"
base64 = "0.21"  # For embedding WASM as base64
sqlite-wasm-rs = { version = "=0.3.0", default-features = false, features = ["precompiled"] }

[features]
default = []
embed_wasm = []

# [build-dependencies]
# wasm-bindgen-cli would be needed as a CLI tool, not as a Rust dependency

[profile.release]
opt-level = "z"
lto = true

# Export both main thread and worker functions