[workspace]
members = [
    "packages/sqlite-web-core",
    "packages/sqlite-web"
]
exclude = [
    "lib/rain.math.float"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/rainlanguage/sqlite-wasm-rs-test"

[workspace.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Blob",
    "BlobPropertyBag", 
    "Url",
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "BroadcastChannel",
    "MessageEvent", 
    "DedicatedWorkerGlobalScope",
    "Navigator",
    "Window",
    "Location"
]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
uuid = { version = "1.0", features = ["v4", "js"] }
console_error_panic_hook = "0.1"
base64 = "0.21"
sqlite-wasm-rs = { version = "=0.3.0", default-features = false, features = ["precompiled"] }
alloy = { version = "1.0.9", features = ["sol-types", "json", "json-abi"] }
thiserror = "2.0.12"
proptest = "1.7.0"
revm = { version = "25.0.0", default-features = false }
wasm-bindgen-utils = { git = "https://github.com/rainlanguage/rain.wasm", rev = "06990d85a0b7c55378a1c8cca4dd9e2bc34a596a" }
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
